--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,29 @@
+section {
+    background-color: #141414;
+    width: 100vw;
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #141414;
+    color: #fff;
+    text-align: center;
+    padding: 0.5em 0;
+    font-size: 0.8em;
+}
+
+footer p {
+    
+    margin: 0;
+}
+
+.bg-meu {
+    background-color: #141414;
+}
+
 .link-logo {
     width: 95px;
     height: 40px;
